--- a/DebugUtilityMod.csproj
+++ b/DebugUtilityMod.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
@@ -11,7 +11,7 @@
 
 	<PropertyGroup Label="Variables">
 		<!-- SET BELOW TO GAME BASE DIRECTORY-->
-		<GameDir>C:\Program Files (x86)\Steam\steamapps\common\20MinuteTillDawn</GameDir>
+		<GameDir>W:\SteamLibrary\steamapps\common\20MinuteTillDawn</GameDir>
 		<BepInExDir>$(GameDir)\BepInEx</BepInExDir>
 		<GameLibDir>$(GameDir)\MinutesTillDawn_Data\Managed</GameLibDir>
 	</PropertyGroup>
@@ -43,22 +43,13 @@
 
 	<!--Automatic deploy-->
 	<Target Name="Deploy" AfterTargets="Build">
-		<Copy
-			SourceFiles="@(MainAssembly)" DestinationFolder="$(BepInExDir)\plugins"
-		/>
+		<Copy SourceFiles="@(MainAssembly)" DestinationFolder="$(BepInExDir)\plugins" />
 	</Target>
 
 	<!--Release packaging-->
 	<Target Name="Package" AfterTargets="Publish">
-		<MakeDir
-			Directories="$(MSBuildProjectDirectory)\release"
-		/>
-		<Copy
-			SourceFiles="@(MainAssembly)" DestinationFolder="$(MSBuildProjectDirectory)\release"
-		/>
-		<ZipDirectory
-			SourceDirectory="$(MSBuildProjectDirectory)\release"
-			DestinationFile="$(MSBuildProjectDirectory)\$(AssemblyName)-v$(Version).zip"
-		/>
+		<MakeDir Directories="$(MSBuildProjectDirectory)\release" />
+		<Copy SourceFiles="@(MainAssembly)" DestinationFolder="$(MSBuildProjectDirectory)\release" />
+		<ZipDirectory SourceDirectory="$(MSBuildProjectDirectory)\release" DestinationFile="$(MSBuildProjectDirectory)\$(AssemblyName)-v$(Version).zip" />
 	</Target>
 </Project>
