Some rework to fit MTDUI latest version Improved NoUnlock logic

--- a/DebugUtilityMod.csproj
+++ b/DebugUtilityMod.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<AssemblyName>DebugUtilityMod</AssemblyName>
 		<Description>A mod for modders</Description>
-		<Version>1.2</Version>
+		<Version>2.0.0</Version>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
@@ -53,6 +53,7 @@
 	<Target Name="Package" AfterTargets="Publish">
 		<MakeDir Directories="$(MSBuildProjectDirectory)\release" />
 		<Copy SourceFiles="@(MainAssembly)" DestinationFolder="$(MSBuildProjectDirectory)\release" />
+		<Copy SourceFiles="README.md;icon.png;manifest.json" DestinationFolder="$(MSBuildProjectDirectory)\release"/>
 		<ZipDirectory SourceDirectory="$(MSBuildProjectDirectory)\release" DestinationFile="$(MSBuildProjectDirectory)\$(AssemblyName)-v$(Version).zip" />
 	</Target>
 </Project>
