--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
     "name": "DebugUtilityMod",
-    "version_number": "1.2.0",
+    "version_number": "2.0.0",
     "website_url": "",
     "description": "This mod is useful while debugging other mod or the game",
     "dependencies": [
-        "BepInExPackMTD-BepInExPack_20MTD-1.0.0"
+        "BepInExPackMTD-BepInExPack_20MTD-1.0.0",
+        "MTDUI"
     ]
 }
