--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "name": "DebugUtilityMod",
     "version_number": "2.0.0",
-    "website_url": "",
+    "website_url": "https://github.com/NeoKaios/20MTD-DebugUtilityMod",
     "description": "This mod is useful while debugging other mod or the game",
     "dependencies": [
         "BepInExPackMTD-BepInExPack_20MTD-1.0.0",
-        "MTDUI"
+        "Bobbie-MTDUI-1.0.3"
     ]
 }
