--- a/DebugUtilityMod.csproj
+++ b/DebugUtilityMod.csproj
@@ -40,7 +40,7 @@
 			<HintPath>$(GameLibDir)\Unity.TextMeshPro.dll</HintPath>
 		</Reference>
 		<Reference Include="MTDUI">
-			<HintPath>$(BepInExDir)\plugins\MTDUI\MTDUI.dll</HintPath>
+			<HintPath>$(BepInExDir)\plugins\MTDUI.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 
